--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "homepage": "https://github.com/adityakmr7/medium-fullstack#readme",
   "dependencies": {
     "apollo-server": "^2.21.0",
+    "apollo-server-express": "^2.21.0",
     "bcrypt": "^5.0.0",
     "concurrently": "^6.0.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
