login and register added

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Medium fullstack app with graphql",
   "main": "index.js",
+  "engines": {"node": "14.x"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:client": "cd client && npm start",
@@ -37,6 +38,7 @@
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
+    "proptype": "^1.0.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
