--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "engines": {"node": "14.x"},
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "@chakra-ui/react": "^1.3.3",
@@ -16,8 +18,11 @@
     "graphql": "^15.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
   },
