auth token added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medium-fullstack",
+  "name": "medium-clone",
   "version": "1.0.0",
   "description": "Medium fullstack app with graphql",
   "main": "index.js",
