--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^3.6.2",
     "graphql": "^15.5.0",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
