--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
+    "@chakra-ui/icons": "1.0.7",
     "@chakra-ui/react": "^1.3.3",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "4.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
