--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
     "proptype": "^1.0.0",
+    "slug": "4.0.3",
     "validator": "^13.5.2"
   },
   "devDependencies": {
