--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
+    "mongoose-unique-validator": "2.0.3",
     "proptype": "^1.0.0",
     "slug": "4.0.3",
     "validator": "^13.5.2"
