--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
     "mongoose-unique-validator": "2.0.3",
+    "multer": "1.4.2",
     "proptype": "^1.0.0",
     "slug": "4.0.3",
+    "uuid": "8.3.2",
     "validator": "^13.5.2"
   },
   "devDependencies": {
