--- a/package.json
+++ b/package.json
@@ -1,54 +1,25 @@
 {
-  "name": "medium-clone",
+  "name": "medium-fullstack",
   "version": "1.0.0",
-  "description": "Medium fullstack app with graphql",
+  "description": "## Teach stack",
   "main": "index.js",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:client": "cd client && npm start",
-    "dev:server": "nodemon server/index.js",
-    "dev": "concurrently \"npm run dev:server\"  \"npm run dev:client\""
+    "server": "cd server && npm run dev:server",
+    "client": "cd client && npm start",
+    "dev": "concurrently \"npm run server\"  \"npm run client\""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/adityakmr7/medium-fullstack.git"
   },
-  "keywords": [
-    "medium",
-    "graphql",
-    "nodejs",
-    "reactjs"
-  ],
-  "author": "Aditya Kumar",
+  "author": "aditya <adityakmr9672@gmail.com> (http://adityakmr.in/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/adityakmr7/medium-fullstack/issues"
   },
   "homepage": "https://github.com/adityakmr7/medium-fullstack#readme",
-  "dependencies": {
-    "apollo-server": "^2.21.0",
-    "apollo-server-express": "^2.21.0",
-    "bcrypt": "^5.0.0",
-    "concurrently": "^6.0.0",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.5.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.17",
-    "mongoose-unique-validator": "2.0.3",
-    "multer": "1.4.2",
-    "proptype": "^1.0.0",
-    "slug": "4.0.3",
-    "uuid": "8.3.2",
-    "validator": "^13.5.2"
-  },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "concurrently": "6.0.1"
   }
 }
