--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "formik": "^2.2.6",
     "framer-motion": "^3.6.2",
@@ -63,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "11.2.6",
     "babel-eslint": "10.1.0",
     "eslint": "7.23.0",
     "eslint-config-airbnb": "18.2.1",
