--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:client": "cd client && npm start",
+    "start": "node index.js",
     "dev:server": "nodemon server/index.js"
   },
   "repository": {
